--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<div class="col-md-12">
 					<br>
 					<p> 
-						I received my Ph.D. in Computer Science from UCLA, supervised by  <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a> and <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>. I am a member of <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">UCLA Natural Language Processing Group (UCLA NLP)</a> and <a href="https://vcla.stat.ucla.edu/" target="_blank">the Center for Vision, Cognition, Learning, and Autonomy (VCLA)</a>.  Previously, I received a Research Master's degree at Tsinghua University, advised by <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. My research has been funded by 
+						I received my Ph.D. in Computer Science from UCLA, advised by  <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a> and <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>. I am a member of <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">UCLA Natural Language Processing Group (UCLA NLP)</a> and <a href="https://vcla.stat.ucla.edu/" target="_blank">the Center for Vision, Cognition, Learning, and Autonomy (VCLA)</a>.  Previously, I received my M.S. in computer science at Tsinghua University, supervised by <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. My research has been funded by 
 						<a href="https://www.sciencehub.ucla.edu/2023-amazon-fellows/" target="_blank">Amazon PhD Fellowship</a>, 
 						<a href="https://www.bloomberg.com/company/stories/introducing-the-sixth-cohort-of-bloomberg-data-science-ph-d-fellows-2023-2024/" target="_blank">Bloomberg Data Science Ph.D. Fellowship</a>, 
 						<a href="https://www.qualcomm.com/research/university-relations/innovation-fellowship/2023-north-america" target="_blank">Qualcomm Innovation Fellowship</a>, 
@@ -210,6 +210,16 @@
 			<h3 id="News" style="">News</h3>
 			<hr>
 			<ul>
+				<li>
+					<strong>[06/2024]&nbsp; <font color="red">New!</font></strong>
+					A paper on debugging visual programs is available at
+					<b><a href="https://arxiv.org/abs/2406.13444" target="_blank">Preprint</a></b>.
+				</li>
+				<li>
+					<strong>[06/2024]&nbsp; <font color="red">New!</font></strong>
+					A paper on multi-image understanding is available at
+					<b><a href="https://arxiv.org/abs/2406.09411" target="_blank">Preprint</a></b>.
+				</li>
 				<li>
 					<strong>[05/2024]&nbsp; <font color="red">New!</font></strong>
 					A paper on enhancing LVLMs with self-training is available at
@@ -316,42 +326,42 @@
 					<strong>[06/2023]&nbsp; <font color="red">New!</font></strong>
 					 Excited to receive the <b><a href="https://grad.ucla.edu/funding/financial-aid/funding-for-continuing-students/dissertation-year-fellowship/" target="_blank"> UCLA Dissertation Year Fellowship</a></b>. 
 				</li>
-				<li>
-					<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
-					Honored to deliver a guest lecture for UCLA CS 263: Natural Language Processing. 
-					<b><a href="docs/UCLA CS263 NLP_Guest Lecture_Pan Lu_2023.05.31.pdf" target="_blank">[Slides]</a></b>
-				</li>
-				<li>
-					<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
-					One paper on theorem-driven math question answering
-					(<b><a href="https://github.com/wenhuchen/TheoremQA" target="_blank">TheoremQA</a></b>)
-					is available at
-					<b><a href="https://arxiv.org/abs/2305.12524" target="_blank">Preprint</a></b>.
-				</li>
-				<li>
-					<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
-					Honored to deliver a invited talk on tool-augmented LLMs at Google Brain. 
-					<b><a href="docs/Chameleon_LLM_Pan_Lu_Google_Brain_2023.05.05.pdf" target="_blank">[Slides]</a></b>
-				</li>
-				<li>
-					<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
-					Delighted to join prestigious <b><a href="https://lightning.ai/" target="_blank">LightingAI</a></b>
-					event as invited speaker on Discord. 
-				</li>
-				<li>
-					<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
-					A paper on multimodal procedural planning is available at
-					<b><a href="https://arxiv.org/abs/2305.01795" target="_blank">Preprint</a></b>.
-				</li>
-				<li>
-					<strong>[05/2023]&nbsp;  <font color="red">New!</font></strong>
-					One survey paper on deep learning for mathematical reasoning is accepted to <b>ACL 2023</b></font></b>.
-				</li>
 			</ul>
 			<div id="content"> 
 				<span id="dots"></span>
 				<span id="more">
 					<ul style="margin-top: -15px">
+						<li>
+							<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
+							Honored to deliver a guest lecture for UCLA CS 263: Natural Language Processing. 
+							<b><a href="docs/UCLA CS263 NLP_Guest Lecture_Pan Lu_2023.05.31.pdf" target="_blank">[Slides]</a></b>
+						</li>
+						<li>
+							<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
+							One paper on theorem-driven math question answering
+							(<b><a href="https://github.com/wenhuchen/TheoremQA" target="_blank">TheoremQA</a></b>)
+							is available at
+							<b><a href="https://arxiv.org/abs/2305.12524" target="_blank">Preprint</a></b>.
+						</li>
+						<li>
+							<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
+							Honored to deliver a invited talk on tool-augmented LLMs at Google Brain. 
+							<b><a href="docs/Chameleon_LLM_Pan_Lu_Google_Brain_2023.05.05.pdf" target="_blank">[Slides]</a></b>
+						</li>
+						<li>
+							<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
+							Delighted to join prestigious <b><a href="https://lightning.ai/" target="_blank">LightingAI</a></b>
+							event as invited speaker on Discord. 
+						</li>
+						<li>
+							<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
+							A paper on multimodal procedural planning is available at
+							<b><a href="https://arxiv.org/abs/2305.01795" target="_blank">Preprint</a></b>.
+						</li>
+						<li>
+							<strong>[05/2023]&nbsp;  <font color="red">New!</font></strong>
+							One survey paper on deep learning for mathematical reasoning is accepted to <b>ACL 2023</b></font></b>.
+						</li>
 						<li>
 							<strong>[04/2023]&nbsp; <font color="red">New!</font></strong>
 							<b><a href="https://github.com/OpenGVLab/LLaMA-Adapter" target="_blank">LLaMA-Adapter-V2</a></b>, 
@@ -516,11 +526,91 @@
 	</div>
 	<br>
 
+	<!-- Travel -->
+	<div class="container">
+		<h3 id="Awards" style="">Upcoming Travel</h3>
+		<hr>
+		<ul>
+			<li>October 7-9, 2024:
+				<a href="https://colmweb.org/" target="_blank">COLM 2024 at Philadelphia, PA</a>
+			</li>
+			<li>November 12-16, 2024:
+				<a href="https://2024.emnlp.org/" target="_blank">EMNLP 2024 at Miami, Florida</a>
+			</li>
+			<li>June 10-17, 2025:
+				<a href="https://www.thecvf.com/" target="_blank">CVPR 2025 at Nashville, Tennessee</a>
+			</li>
+			<!-- <li>October 19-25, 2025:
+				<a href="https://www.thecvf.com/" target="_blank">ICCV 2025 at Honolulu, Hawaii</a>
+			</li> -->
+		</ul>
+	</div><br>
+
+
 	<!-- Publications -->
 	<div class="container">
 		<h3 id="Publications" style="">Selected Publications</h3>
 		<hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
+
+		<!-- VDebugger -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv24_vdebugger.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b>
+					<font color="black">
+						Enhancing Large Vision Language Models with Self-Training on Image Comprehension
+					</font>
+				</b><br>
+				Xueqing Wu, Zongyu Lin, Songyan Zhao, Te-Lin Wu, <b>Pan Lu</b>, Nanyun Peng, Kai-Wei Chang
+				<br>
+				<b><a href="https://arxiv.org/abs/2406.13444" target="_blank">arXiv:2406.13444&nbsp;</a></b>
+				<a href="https://shirley-wu.github.io/vdebugger/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2406.13444" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2406.13444.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/shirley-wu/vdebugger/" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://huggingface.co/VDebugger" target="_blank"> <small>[Model]&nbsp;</small></a>
+				<a href="https://huggingface.co/VDebugger" target="_blank"> <small>[Data]&nbsp;</small></a>
+				<a href="https://x.com/xueqing_w/status/1804038847304733122" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<!-- <a href="https://huggingface.co/papers/240X.XXXXX" target="_blank"> <small>[Daily Papers]&nbsp;</small></a> -->
+				<a href="bibs/arxiv24_vdebugger.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
+
+		<!-- MuirBench -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv24_muirbench.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="">
+					<img src="logos/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">
+						MuirBench: A Comprehensive Benchmark for Robust Multi-image Understanding
+					</font>
+				</b><br>
+				Fei Wang*, Xingyu Fu*, James Y. Huang, Zekun Li, Qin Liu, Xiaogeng Liu, Mingyu Derek Ma, Nan Xu, Wenxuan Zhou, Kai Zhang, Tianyi Lorena Yan, Wenjie Jacky Mo, Hsiang-Hui Liu, <b>Pan Lu</b>, Chunyuan Li, Chaowei Xiao, Kai-Wei Chang, Dan Roth, Sheng Zhang, Hoifung Poon, Muhao Chen
+				<br>
+				<b><a href="https://arxiv.org/abs/2406.09411" target="_blank">arXiv:2406.09411&nbsp;</a></b>
+				<a href="https://stic-lvlm.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2406.09411" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2406.09411.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://huggingface.co/papers/2406.09411" target="_blank"> <small>[Hugging Face]&nbsp;</small></a>
+				<a href="https://github.com/yihedeng9/STIC" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://huggingface.co/datasets/MUIRBENCH/MUIRBENCH" target="_blank"> <small>[Data]&nbsp;</small></a>
+				<!-- <a href="https://twitter.com/_akhaliq/status/1771019526265618889" target="_blank"> <small>[Coverage]&nbsp;</small></a> -->
+				<!-- <a href="https://huggingface.co/papers/240X.XXXXX" target="_blank"> <small>[Daily Papers]&nbsp;</small></a> -->
+				<a href="bibs/arxiv24_muirbench.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				(*Equal Contribution)<br>
+			</div>
+		</div>
+		<hr>
+
 
 		<!-- STIC -->
 		<div class="row">
@@ -528,6 +618,9 @@
 				<img class="img-fluid img-rounded" src="imgs/arxiv24_stic.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
+				<a href="">
+					<img src="logos/fire.png" id="logo">
+				</a>
 				<b>
 					<font color="black">
 						Enhancing Large Vision Language Models with Self-Training on Image Comprehension
@@ -1590,12 +1683,22 @@
 		<h3 id="Awards" style="">Selected Awards</h3>
 		<hr>
 		<ul>
+			<li><strong>Bloomberg Data Science Ph.D. Fellowship</strong>, 
+				2023-2024
+				<a href="https://www.bloomberg.com/company/stories/introducing-the-sixth-cohort-of-bloomberg-data-science-ph-d-fellows-2023-2024/" target="_blank">[Bloomberg]</a>
+				<a href="https://samueli.ucla.edu/ucla-samueli-in-the-news" target="_blank">[UCLA Engineering]</a>
+				<a href="https://www.cs.ucla.edu/cs-ph-d-pan-lu-awarded-bloomberg-data-science-ph-d-fellowship/" target="_blank">[UCLA CS]</a>
+			</li>
 			<li><strong>EMNLP 2024 Diversity and Inclusion Award</strong>, 2023</li>
 			<li><strong>NeurIPS 2023 Scholar Award</strong>, 2023</li>
-			<li><strong>Bloomberg PhD Fellowship</strong>, 2023</li>
-			<li><strong>Qualcomm Innovation Fellowship</strong>, 2023</li>
+			<li><strong>Qualcomm Innovation Fellowship</strong>, 2023
+				<a href="https://www.qualcomm.com/research/university-relations/innovation-fellowship/2023-north-america" target="_blank">[Qualcomm]</a>
+				<a href="https://www.cs.ucla.edu/phd-student-pan-lu-wins-2023-qualcomm-innovation-fellowship/" target="_blank">[UCLA CS]</a>
+			</li>
 			<li><strong>UCLA Dissertation Year Fellowship</strong>, 2023</li>
-			<li><strong>Amazon PhD Fellowship</strong>, 2023</li>
+			<li><strong>Amazon PhD Fellowship</strong>, 2023
+				<a href="https://www.sciencehub.ucla.edu/2023-amazon-fellows/" target="_blank">[UCLA/Amazon]</a>
+			</li>
 			<li><strong>NeurIPS 2022 Scholar Award</strong>, 2022</li>
 			<!-- <li><strong>AAAI Travel Award</strong>, 2023</li> -->
 			<li><strong>NeurIPS 2022 Top Reviewer</strong>, 2022</li>
