--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
 			<div class="col-md-9">
 				<b>
 					<font color="black">
-						Enhancing Large Vision Language Models with Self-Training on Image Comprehension
+						VDebugger: Harnessing Execution Feedback for Debugging Visual Programs
 					</font>
 				</b><br>
 				Xueqing Wu, Zongyu Lin, Songyan Zhao, Te-Lin Wu, <b>Pan Lu</b>, Nanyun Peng, Kai-Wei Chang
