--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
 				<a href="https://github.com/shirley-wu/vdebugger/" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="https://huggingface.co/VDebugger" target="_blank"> <small>[Model]&nbsp;</small></a>
 				<a href="https://huggingface.co/VDebugger" target="_blank"> <small>[Data]&nbsp;</small></a>
-				<a href="https://x.com/xueqing_w/status/1804038847304733122" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="https://x.com/lupantech/status/1805396589785268557" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<!-- <a href="https://huggingface.co/papers/240X.XXXXX" target="_blank"> <small>[Daily Papers]&nbsp;</small></a> -->
 				<a href="bibs/arxiv24_vdebugger.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
@@ -597,11 +597,11 @@
 				Fei Wang*, Xingyu Fu*, James Y. Huang, Zekun Li, Qin Liu, Xiaogeng Liu, Mingyu Derek Ma, Nan Xu, Wenxuan Zhou, Kai Zhang, Tianyi Lorena Yan, Wenjie Jacky Mo, Hsiang-Hui Liu, <b>Pan Lu</b>, Chunyuan Li, Chaowei Xiao, Kai-Wei Chang, Dan Roth, Sheng Zhang, Hoifung Poon, Muhao Chen
 				<br>
 				<b><a href="https://arxiv.org/abs/2406.09411" target="_blank">arXiv:2406.09411&nbsp;</a></b>
-				<a href="https://stic-lvlm.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<!-- <a href="" target="_blank"> <small>[Project]&nbsp;</small></a> -->
 				<a href="https://arxiv.org/abs/2406.09411" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="https://arxiv.org/pdf/2406.09411.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://huggingface.co/papers/2406.09411" target="_blank"> <small>[Hugging Face]&nbsp;</small></a>
-				<a href="https://github.com/yihedeng9/STIC" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<!-- <a href="" target="_blank"> <small>[Code]&nbsp;</small></a> -->
 				<a href="https://huggingface.co/datasets/MUIRBENCH/MUIRBENCH" target="_blank"> <small>[Data]&nbsp;</small></a>
 				<!-- <a href="https://twitter.com/_akhaliq/status/1771019526265618889" target="_blank"> <small>[Coverage]&nbsp;</small></a> -->
 				<!-- <a href="https://huggingface.co/papers/240X.XXXXX" target="_blank"> <small>[Daily Papers]&nbsp;</small></a> -->
