--- a/index.html
+++ b/index.html
@@ -597,14 +597,13 @@
 				Fei Wang*, Xingyu Fu*, James Y. Huang, Zekun Li, Qin Liu, Xiaogeng Liu, Mingyu Derek Ma, Nan Xu, Wenxuan Zhou, Kai Zhang, Tianyi Lorena Yan, Wenjie Jacky Mo, Hsiang-Hui Liu, <b>Pan Lu</b>, Chunyuan Li, Chaowei Xiao, Kai-Wei Chang, Dan Roth, Sheng Zhang, Hoifung Poon, Muhao Chen
 				<br>
 				<b><a href="https://arxiv.org/abs/2406.09411" target="_blank">arXiv:2406.09411&nbsp;</a></b>
-				<!-- <a href="" target="_blank"> <small>[Project]&nbsp;</small></a> -->
+				<a href="https://muirbench.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://arxiv.org/abs/2406.09411" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="https://arxiv.org/pdf/2406.09411.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://huggingface.co/papers/2406.09411" target="_blank"> <small>[Hugging Face]&nbsp;</small></a>
-				<!-- <a href="" target="_blank"> <small>[Code]&nbsp;</small></a> -->
+				<a href="https://github.com/muirbench/MuirBench" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="https://huggingface.co/datasets/MUIRBENCH/MUIRBENCH" target="_blank"> <small>[Data]&nbsp;</small></a>
-				<!-- <a href="https://twitter.com/_akhaliq/status/1771019526265618889" target="_blank"> <small>[Coverage]&nbsp;</small></a> -->
-				<!-- <a href="https://huggingface.co/papers/240X.XXXXX" target="_blank"> <small>[Daily Papers]&nbsp;</small></a> -->
+				<a href="https://x.com/lupantech/status/1806021467836186911" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="bibs/arxiv24_muirbench.txt" target="_blank"> <small>[BibTex]</small></a><br>
 				(*Equal Contribution)<br>
 			</div>
