--- a/index.html
+++ b/index.html
@@ -215,6 +215,11 @@
 			<hr>
 			<ul>
 				<li>
+					<strong>[07/2024]&nbsp; <font color="red">New!</font></strong>
+					One paper on visual math problems is accepted to
+					<b><a href="https://eccv2024.ecva.net/Conferences/2024" target="_blank">ECCV 2024</a></b>.
+				</li>
+				<li>
 					<strong>[06/2024]&nbsp; <font color="red">New!</font></strong>
 					A paper on debugging visual programs is available at
 					<b><a href="https://arxiv.org/abs/2406.13444" target="_blank">Preprint</a></b>.
@@ -660,7 +665,7 @@
 				</b><br>
 				Renrui Zhang, Dongzhi Jiang, Yichi Zhang, Haokun Lin, Ziyu Guo, Pengshuo Qiu, Aojun Zhou, <b>Pan Lu</b>, Kai-Wei Chang, Peng Gao, Hongsheng Li
 				<br>
-				<b><a href="https://arxiv.org/abs/2403.14624" target="_blank">arXiv:2403.14624&nbsp;</a></b>
+				<b><a href="https://eccv2024.ecva.net/Conferences/2024" target="_blank">ECCV 2024&nbsp;</a></b>
 				<a href="https://mathverse-cuhk.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://arxiv.org/abs/2403.14624" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="https://arxiv.org/pdf/2403.14624.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
