--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
 							<a href="https://mathai2023.github.io/" target="_blank">[MATH-AI]</a>
 						</li>
 						<li>
-							<strong>Tool-augmented large language models</strong> for planning, reasoning, and generation 
+							<strong>Tool-augmented large language models</strong> for planning, reasoning, and generation
+							<a href="https://textgrad.com/" target="_blank">[TextGrad]</a>
 							<a href="https://chameleon-llm.github.io/" target="_blank">[Chameleon]</a>
 							<a href="https://arxiv.org/abs/2406.13444" target="_blank">[VDebugger]</a> 
 							<!-- <a href="https://arxiv.org/abs/2307.10635" target="_blank">[SciBench]</a>  -->
