--- a/index.html
+++ b/index.html
@@ -547,6 +547,9 @@
 			<li>November 12-16, 2024:
 				<a href="https://2024.emnlp.org/" target="_blank">EMNLP 2024 at Miami, Florida</a>
 			</li>
+			<li>January 8-11, 2025:
+				<a href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_intro" target="_blank">JMM 2025 at Seattle, Washington</a>
+			</li>
 			<li>June 10-17, 2025:
 				<a href="https://www.thecvf.com/" target="_blank">CVPR 2025 at Nashville, Tennessee</a>
 			</li>
