add news for students

--- a/index.html
+++ b/index.html
@@ -178,27 +178,11 @@
 							<!-- <a href="https://arxiv.org/abs/2305.12524" target="_blank">[TheoremQA]</a> -->
 						</li>
 					</ul>
-					<!-- <p>
-						In addition, I am interested in:
-					</p>
-					<ul>
-						<li>
-							<strong>Conversational agents</strong> that are socially intelligent and human-in-loop, understanding emotions, relationships, values, and theory of mind 
-							<a href="https://chats-lab.github.io/KokoMind/" target="_blank">[KokoMind]</a>
-							<a href="https://arxiv.org/abs/2103.07011" target="_blank">[SIGDIAL-22]</a>
-							<a href="https://arxiv.org/abs/2112.06346" target="_blank">[AAAI-22]</a>
-							<a href="https://arxiv.org/abs/2106.01006" target="_blank">[ACL-21]</a>
-						</li>
-						<li>
-							<strong>Multimodal reasoning</strong> for vision, language, and knowledge
-							<a href="https://lupantech.github.io/papers/aaai20_caption.pdf" target="_blank">[AAAI-20] 
-							<a href="https://lupantech.github.io/papers/ijcai19_matching.pdf" target="_blank">[IJCAI-19]</a>
-							<a href="https://lupantech.github.io/papers/cvpr19_dynamicvqa.pdf" target="_blank">[CVPR-19]</a> 
-							<a href="https://lupantech.github.io/papers/eccv18_hybridvqa.pdf" target="_blank">[ECCV-18]</a> 
-							<a href="https://lupantech.github.io/papers/kdd18_rvqa.pdf" target="_blank">[KDD-18]</a> 
-							<a href="https://lupantech.github.io/papers/aaa18_dualvqa.pdf" target="_blank">[AAAI-18]</a>
-						</li>
-					</ul> -->
+					<a style="color: red;">
+						We are seeking highly motivated students to collaborate on research projects focused on
+						<b> AI-driven mathematical reasoning and scientific discovery</b>.  
+						If you're interested in joining our team, please don't hesitate to contact me!
+					</a><br>
 				</div>
 			</div>
 		</div>
