--- a/history/index_2024.08.14.html
+++ b/history/index_2024.08.14.html
@@ -58,8 +58,11 @@
 					<a class="nav-link" href="#Publications">Publications</a>
 				</li>
 				<!-- <li class="nav-item">
-					<a class="nav-link" href="#Experience">Experience</a>
+					<a class="nav-link" href="#Education">Education</a>
 				</li> -->
+				<li class="nav-item">
+					<a class="nav-link" href="#Experience">Experience</a>
+				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#Teaching">Teaching</a>
 				</li>
@@ -100,6 +103,7 @@
 				<a target="_blank" href="https://www.linkedin.com/in/pan-lu-9308909a/">
 					<font color="gray"><i class="fab fa-linkedin fa-lg"></i></font>
 				</a>&thinsp;
+				<!-- <a target="_blank" href="https://www.facebook.com/xxx"><font color="black"><i class="fab fa-facebook-square fa-lg"></i></font></a>&nbsp;&nbsp;&nbsp;&nbsp; -->
 				<!-- <a target="_blank" href="files/CV_Pan Lu.pdf"><font color="black"><i class="ai ai-cv ai-lg"></i></font></a> -->
 				<a target="_blank" href="https://twitter.com/lupantech">
 					<font color="gray"><i class="fab fa-twitter fa-lg"></i></font>
@@ -122,7 +126,12 @@
 						<a href="https://www.bloomberg.com/company/stories/introducing-the-sixth-cohort-of-bloomberg-data-science-ph-d-fellows-2023-2024/" target="_blank">Bloomberg Data Science Ph.D. Fellowship</a>, 
 						<a href="https://www.qualcomm.com/research/university-relations/innovation-fellowship/2023-north-america" target="_blank">Qualcomm Innovation Fellowship</a>, 
 						<a href="https://grad.ucla.edu/funding/financial-aid/funding-for-continuing-students/dissertation-year-fellowship/" target="_blank">UCLA Dissertation Year Fellowship</a>, 
+						<!-- <a href="https://www.darpa.mil/program/explainable-artificial-intelligence" target="_blank">DARPA</a>,
+						<a href="https://vcla.f.ucla.edu/MURI_Visual_CommonSense/" target="_blank">Naval Research Grant</a>,  -->
 						and NeurIPS Scholar Award.
+
+						<!-- <a href="https://www.darpa.mil/program/explainable-artificial-intelligence" target="_blank">DARPA</a>,
+						<a href="https://vcla.stat.ucla.edu/MURI_Visual_CommonSense/" target="_blank">Naval Research Grant</a> -->
 					</p>
 					<p>
 						My research goal is to build machines that can <strong>reason</strong> and <strong>collaborate</strong> with humans for the common good. My primary research focuses on <strong>machine learning</strong> and <strong>NLP</strong>, particularly <strong>machine reasoning</strong>, <strong>mathematical reasoning</strong>, and <strong>scientific discovery</strong>. 
@@ -513,7 +522,7 @@
 
 	<!-- Travel -->
 	<div class="container">
-		<h3 id="Travels" style="">Upcoming Travel</h3>
+		<h3 id="Awards" style="">Upcoming Travel</h3>
 		<hr>
 		<ul>
 			<li>October 7-9, 2024:
@@ -540,9 +549,6 @@
 		<h3 id="Publications" style="">Selected Publications</h3>
 		<hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
-		All publications can be found on my <a href="https://scholar.google.com/citations?user=IyucsdQAAAAJ&hl=en" target="_blank">Google Scholar</a> page.
-		<br>
-		<br>
 
 		<!-- VDebugger -->
 		<div class="row">
@@ -1462,8 +1468,29 @@
 	</div><br>
 
 
+	<!-- Education -->
+	<div class="container">
+		<h3 id="Education" style="">Education</h3>
+		<hr>
+		<ul>
+			<li>
+				<strong>University of California, Los Angeles</strong>, 2019 - 2024<br>
+				Ph.D. Student in Computer Science
+			</li>
+			<li>
+				<strong>Tsinghua University</strong>, 2015 - 2018<br>
+				M.Eng. in Computer Science
+			</li>
+			<li>
+				<strong>Beijing Institute of Technology</strong>, 2011 - 2015<br>
+				B.S. in Electrical Engineering (Automation)
+			</li>
+		</ul>
+	</div><br>
+
+
 	<!-- Experience -->
-	<!-- <div class="container">
+	<div class="container">
 		<h3 id="Experience" style="">Selected Experience</h3>
 		<hr>
 		<ul>
@@ -1471,9 +1498,15 @@
 				<strong>Research Intern</strong>, <em>Microsoft Research</em>, 2022.12 - 2023.12 <br>
 				Mentors: 
 				Dr. <a href="https://sites.google.com/site/hcheng2site" target="_blank">Hao Cheng</a>,
+				<!-- Dr. <a href="https://www.microsoft.com/en-us/research/people/bapeng/" target="_blank">Baolin Peng</a>, -->
 				Dr. <a href="https://www.microsoft.com/en-us/research/people/mgalley/" target="_blank">Michel Galley</a>,
 				Dr. <a href="https://www.microsoft.com/en-us/research/people/jfgao/" target="_blank">Jianfeng Gao</a>
 			</li>
+			<!-- <li>
+				<strong>Graduate Student Researcher</strong>, <em>Center for Vision, Cognition, Learning, and
+					Autonomy</em>, <em>UCLA</em>, 2019.9 - Present<br>
+				Advisor: Prof. <a href="http://web.cs.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>
+			</li> -->
 			<li>
 				<strong>Research Intern</strong>, <em>Allen Institute for AI (AI2)</em>, 2022.3 - 2022.12 <br>
 				Mentors: Dr. <a href="http://ashwinkalyan.com/" target="_blank">Ashwin Kalyan</a>,
@@ -1485,6 +1518,11 @@
 				Mentors: Dr. <a href="https://research.adobe.com/person/jiuxiang-gu/" target="_blank">Jiuxiang Gu</a>,
 				Dr. <a href="https://research.adobe.com/person/tong-sun/" target="_blank">Tong Sun</a>
 			</li>
+			<!-- <li>
+				<strong>Researcher Intern</strong>, <em>Basemodel Group</em>, <em>Face Plus</em>, 2019.3 - 2019.7 <br>
+				Advisor: Dr. <a href="https://scholar.google.com/citations?user=yuB-cfoAAAAJ&hl=en"
+					target="_blank">Xiangyu Zhang</a>
+			</li> -->
 			<li>
 				<strong>Research Intern</strong>, <em>Natural Language Computing Group</em>, <em> Microsoft Research
 					Asia</em>, 2017.11 - 2018.5<br>
@@ -1499,8 +1537,18 @@
 				Advisors: Prof. <a href="https://www.ee.cuhk.edu.hk/~hsli/" target="_blank">Hongsheng Li</a>, Prof. <a
 					href="https://www.ee.cuhk.edu.hk/~xgwang/" target="_blank">Xiaogang Wang</a>
 			</li>
+			<!-- <li>
+				<strong>Research Assistant</strong>, <em>Data Mining Group</em>, <em>Tsinghua University</em>, 2014.11 -
+				2018.7 <br>
+				Advisor: Prof. <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>
+			</li> -->
+			<!-- <li>
+				<strong>Research Intern</strong>, <em>Institute of Automation</em>, <em>Chinese Academy of
+					Sciences</em>, 2014.7 - 2014.9 <br>
+				Advisor: Prof. <a href="http://www.nlpr.ia.ac.cn/users/szli/" target="_blank">Stan Z. Li</a>
+			</li> -->
 		</ul>
-	</div><br> -->
+	</div><br>
 
 
 	<!-- Teaching -->
@@ -1560,11 +1608,6 @@
 			<ul>
 				<li>
 					<strong>Co-organizer</strong>, Workshop on
-					<a href="https://mathai2024.github.io/" target="_blank">MATH-AI: The 4th Workshop on Mathematical Reasoning and AI</a> 
-					at NeurIPS 2024
-				</li>
-				<li>
-					<strong>Co-organizer</strong>, Workshop on
 					<a href="https://sites.google.com/view/ai4mathworkshopicml2024" target="_blank">AI for Math</a> 
 					at ICML 2024
 				</li>
@@ -1597,7 +1640,7 @@
 			</ul>
 			<h4 id="Service" style="">Program Committee Member</h4>
 				<ul>
-					<li> <strong>2024</strong>: NeurIPS, ICLR, ICML, CVPR, COLM, ARR, SIGKDD</li>
+					<li> <strong>2024</strong>: ICLR, ICML, CVPR, COLM, ARR, SIGKDD</li>
 					<li> <strong>2023</strong>: NeurIPS, ICLR, ACL, EMNLP, AAAI</li>
 					<li> <strong>2022</strong>: NeurIPS, ICLR, CVPR, AAAI,
 						COLING</li>
