--- a/index.html
+++ b/index.html
@@ -192,6 +192,11 @@
 			<ul>
 				<li>
 					<strong>[09/2024]&nbsp; <font color="red">New!</font></strong>
+					One paper on self-improving vision-language models is accepted to
+					<b><a href="https://neurips.cc/Conferences/2024" target="_blank">NeurPIS 2024</a></b>.
+				</li>
+				<li>
+					<strong>[09/2024]&nbsp; <font color="red">New!</font></strong>
 					Three papers are accepted to
 					<b><a href="https://2024.emnlp.org/" target="_blank">EMNLP 2024</a></b>. See you in Miami!
 				</li>
@@ -612,7 +617,7 @@
 		<!-- STIC -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/arxiv24_stic.png" style="" alt="">
+				<img class="img-fluid img-rounded" src="imgs/neurips24_stic.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<a href="">
@@ -625,7 +630,7 @@
 				</b><br>
 				Yihe Deng*, <b>Pan Lu</b>*, Fan Yin, Ziniu Hu, Sheng Shen, James Zou, Kai-Wei Chang, Wei Wang
 				<br>
-				<b><a href="https://arxiv.org/abs/2405.19716" target="_blank">arXiv:2405.19716&nbsp;</a></b>
+				<b><a href="https://neurips.cc/Conferences/2024" target="_blank">NeurIPS 2024&nbsp;</a></b>
 				<a href="https://stic-lvlm.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://arxiv.org/abs/2405.19716" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="https://arxiv.org/pdf/2405.19716.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
@@ -635,7 +640,7 @@
 				<a href="https://huggingface.co/collections/STIC-LVLM/stic-data-6658e7f93aa5d4bb34ef140b" target="_blank"> <small>[Data]&nbsp;</small></a>
 				<!-- <a href="https://twitter.com/_akhaliq/status/1771019526265618889" target="_blank"> <small>[Coverage]&nbsp;</small></a> -->
 				<!-- <a href="https://huggingface.co/papers/240X.XXXXX" target="_blank"> <small>[Daily Papers]&nbsp;</small></a> -->
-				<a href="bibs/arxiv24_stic.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="bibs/neurips24_stic.txt" target="_blank"> <small>[BibTex]</small></a><br>
 				(*Equal Contribution)<br>
 			</div>
 		</div>
