--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 						Enhancing Large Vision Language Models with Self-Training on Image Comprehension
 					</font>
 				</b><br>
-				Yihe Deng*, <b>Pan Lu</b>*, Fan Yin, Ziniu Hu, Sheng Shen, James Zou, Kai-Wei Chang, Wei Wang
+				Yihe Deng*, <b>Pan Lu</b>*, Fan Yin, Ziniu Hu, Sheng Shen, Quanquan Gu, James Zou, Kai-Wei Chang, Wei Wang
 				<br>
 				<b><a href="https://neurips.cc/Conferences/2024" target="_blank">NeurIPS 2024&nbsp;</a></b>
 				<a href="https://stic-lvlm.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
