--- a/index.html
+++ b/index.html
@@ -526,20 +526,26 @@
 		<h3 id="Travels" style="">Upcoming Travel</h3>
 		<hr>
 		<ul>
-			<li>October 7-9, 2024:
+			<!-- <li>October 7-9, 2024:
 				<a href="https://colmweb.org/" target="_blank">COLM 2024 at Philadelphia, PA</a>
-			</li>
-			<li>November 12-16, 2024:
+			</li> -->
+			<li>November 12 - November 16, 2024:
 				<a href="https://2024.emnlp.org/" target="_blank">EMNLP 2024 at Miami, Florida</a>
 			</li>
-			<li>January 8-11, 2025:
+			<li>January 8, January 11, 2025:
 				<a href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_intro" target="_blank">JMM 2025 at Seattle, Washington</a>
 			</li>
-			<li>June 10-17, 2025:
+			<li>April 29 - May 4, 2025:
+				<a href="https://2025.naacl.org/" target="_blank">NAACL 2025 at Albuquerque, New Mexico</a>
+			</li>
+			<li>June 10 - June 17, 2025:
 				<a href="https://www.thecvf.com/" target="_blank">CVPR 2025 at Nashville, Tennessee</a>
 			</li>
 			<!-- <li>October 19-25, 2025:
 				<a href="https://www.thecvf.com/" target="_blank">ICCV 2025 at Honolulu, Hawaii</a>
+			</li>
+			<li>December 9-15, 2025:
+				<a href="https://neurips.cc/" target="_blank">NeurIPS 2025 at San Diego, California</a>
 			</li> -->
 		</ul>
 	</div><br>
