--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
 					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
 				</a> -->
 				<b>
-					<font color="black">Model Editing Can Hurt General Abilities of Large Language Models</font>
+					<font color="black">Model Editing Harms General Abilities of Large Language Models: Regularization to the Rescue</font>
 				</b><br>
 				Jia-Chen Gu, Hao-Xiang Xu, Jun-Yu Ma, <b>Pan Lu</b>, Zhen-Hua Ling, Kai-Wei Chang, Nanyun Peng
 				<br>
