--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@
 				<div class="col-md-12">
 					<br>
 					<p> 
-						I am a Postdoctoral Scholar with Professor <a href="https://www.james-zou.com/" target="_blank">James Zou</a> at Stanford University.  I received my Ph.D. in Computer Science from UCLA, advised by  <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a> and <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>. I am a member of <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">UCLA Natural Language Processing Group (UCLA NLP)</a> and <a href="https://vcla.stat.ucla.edu/" target="_blank">the Center for Vision, Cognition, Learning, and Autonomy (VCLA)</a>.  Previously, I received my M.S. in computer science at Tsinghua University, supervised by <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. My research has been funded by 
+						I am a Postdoctoral Scholar at Stanford University. I am affiliated with <a href="https://ai.stanford.edu/" target="_blank">Stanford AI Lab</a> and 
+						<a href="https://www.james-zou.com/people" target="_blank">Zou's Group</a>, where I am fortunate to be advised by <a href="https://www.james-zou.com/" target="_blank">James Zou</a>.
+					</p>
+					<p>
+						I received my Ph.D. in Computer Science from UCLA, advised by  <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a> and <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>. I was a member of <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">UCLA Natural Language Processing Group (UCLA NLP)</a> and <a href="https://vcla.stat.ucla.edu/" target="_blank">the Center for Vision, Cognition, Learning, and Autonomy (VCLA)</a>.  Previously, I received my M.S. in computer science at Tsinghua University, supervised by <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. My research has been funded by 
 						<a href="https://www.sciencehub.ucla.edu/2023-amazon-fellows/" target="_blank">Amazon PhD Fellowship</a>, 
 						<a href="https://www.bloomberg.com/company/stories/introducing-the-sixth-cohort-of-bloomberg-data-science-ph-d-fellows-2023-2024/" target="_blank">Bloomberg Data Science Ph.D. Fellowship</a>, 
 						<a href="https://www.qualcomm.com/research/university-relations/innovation-fellowship/2023-north-america" target="_blank">Qualcomm Innovation Fellowship</a>, 
