--- a/index.html
+++ b/index.html
@@ -677,6 +677,9 @@
 				<a href="https://twitter.com/JasonForJoy/status/1744932437006885060" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<!-- <a href="" target="_blank"> <small>[Coverage]&nbsp;</small></a> -->
 				<a href="bibs/emnlp24_modelediting.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<a id="award" href="https://alphasignalai.beehiiv.com/p/weeks-top-5-ai-papers?utm_source=alphasignalai.beehiiv.com&utm_medium=newsletter&utm_campaign=this-week-s-top-5-ai-papers" target="_blank">
+					<font color="red"><b>🏆 Best Paper Nomination</b> </font>
+				</a> <br>
 			</div>
 		</div>
 		<hr>
@@ -805,7 +808,7 @@
 				<a href="" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="bibs/icml24_scibench.txt" target="_blank"> <small>[BibTex]</small></a><br>
 				(*Equal Contribution)<br>
-				<a id="best" href="https://www.nature.com/articles/d41586-023-03507-3" target="_blank">
+				<a id="award" href="https://www.nature.com/articles/d41586-023-03507-3" target="_blank">
 					<font color="red"><b>Nature News Feature</b> </font>
 				</a>
 				(15 November 2023)
@@ -819,9 +822,7 @@
 				<img class="img-fluid img-rounded" src="imgs/icml24_sphinx.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
-				<!-- <a href="https://mathvista.github.io/">
-					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
-				</a> -->
+
 				<b>
 					<font color="black">SPHINX-X: Scaling Data and Parameters for a Family of Multi-modal Large Language Models
 					</font>
@@ -867,10 +868,10 @@
 				<a href="https://twitter.com/lupantech/status/1717313355780964608" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="" target="_blank"> <small>[Coverage]&nbsp;</small></a>
 				<a href="bibs/iclr24_mathvista.txt" target="_blank"> <small>[BibTex]</small></a><br>
-				<a id="best" href="" target="_blank">
-					<font color="red"><b>Oral Presentation</b> </font>
+				<a id="award" href="" target="_blank">
+					<font color="red"><b>🏆 Oral Presentation</b> </font>
 				</a> (85 in 7304 submissions, 1.2%) <br>
-				<a id="best" href="https://cryptorank.io/news/feed/d1046-ais-roblem-solving-examined-with-mathvista" target="_blank">
+				<a id="award" href="https://cryptorank.io/news/feed/d1046-ais-roblem-solving-examined-with-mathvista" target="_blank">
 					<font color="red"><b>CryptoRank News Feature</b> </font>
 				</a> (29 October 2023) <br>
 			</div>
@@ -898,7 +899,7 @@
 				<a href="https://twitter.com/lupantech/status/1640899600281395200" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="https://twitter.com/_akhaliq/status/1640884275439628288" target="_blank"> <small>[Coverage]&nbsp;</small></a>
 				<a href="bibs/iclr24_llama.txt" target="_blank"> <small>[BibTex]</small></a><br>
-				<a id="best" href="https://lightning.ai/pages/community/article/understanding-llama-adapters/" target="_blank">
+				<a id="award" href="https://lightning.ai/pages/community/article/understanding-llama-adapters/" target="_blank">
 					<font color="red"><b>LightningAI Blog Feature</b> </font>
 				</a> (14 April 2023) <br>
 			</div>
@@ -927,14 +928,14 @@
 				<a href="https://twitter.com/lupantech/status/1648879085115052033" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="https://twitter.com/_akhaliq/status/1648851856930533378" target="_blank"> <small>[Coverage]&nbsp;</small></a>
 				<a href="bibs/neurips23_chameleon.txt" target="_blank"> <small>[BibTex]</small></a><br>
-				<a id="best" href="https://alphasignalai.beehiiv.com/p/weeks-top-5-ai-papers?utm_source=alphasignalai.beehiiv.com&utm_medium=newsletter&utm_campaign=this-week-s-top-5-ai-papers" target="_blank">
-					<font color="red"><b>Best Weekly AI Paper</b> </font>
+				<a id="award" href="https://alphasignalai.beehiiv.com/p/weeks-top-5-ai-papers?utm_source=alphasignalai.beehiiv.com&utm_medium=newsletter&utm_campaign=this-week-s-top-5-ai-papers" target="_blank">
+					<font color="red"><b>🏆 Best Weekly AI Paper</b> </font>
 				</a> (by AlphaSignal, 1st in 1682, 0.06%) <br>
-				<a id="best" href="https://github.com/jacobmarks/awesome-neurips-2023/tree/main" target="_blank">
-					<font color="red"><b>Awesome NeurIPS 2023 Papers</b> </font>
+				<a id="award" href="https://github.com/jacobmarks/awesome-neurips-2023/tree/main" target="_blank">
+					<font color="red"><b>🏆 Awesome NeurIPS 2023 Papers</b> </font>
 				</a> (40 in 3584, 0.01%) <br>
-				<a id="best" href="https://medium.com/voxel51/neurips-2023-survival-guide-2f957d5b07c9" target="_blank">
-					<font color="red"><b>NeurIPS 2023 Top 10 Multimodal ML Papers </b> </font>
+				<a id="award" href="https://medium.com/voxel51/neurips-2023-survival-guide-2f957d5b07c9" target="_blank">
+					<font color="red"><b>🏆 NeurIPS 2023 Top 10 Multimodal ML Papers </b> </font>
 				</a>
 
 			</div>
