--- a/index.html
+++ b/index.html
@@ -284,41 +284,41 @@
 					<strong>[12/2023]&nbsp; <font color="red">New!</font></strong>
 					Google's <b><a href="https://blog.google/technology/ai/google-gemini-ai/?utm_source=twitter&utm_medium=social&utm_campaign=GDMGemini#performance" target="_blank">Gemini</a></b> benchmarks our <b><a href="https://arxiv.org/abs/2310.02255" target="_blank">MathVista</a></b> for evaluating math reasoning in visual contexts!
 				</li>
-				<li>
-					<strong>[11/2023]&nbsp; <font color="red">New!</font></strong>
-					Honored to be covered by <b><a href="https://www.cs.ucla.edu/phd-student-pan-lu-wins-2023-qualcomm-innovation-fellowship/" target="_blank">UCLA CS</a></b> for winning <b><a href="https://www.qualcomm.com/research/university-relations/innovation-fellowship/2023-north-america" target="_blank">Qualcomm Innovation Fellowship</a></b>. Thanks!
-				</li>
-				<li>
-					<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
-					The 112-page study on GPT-4V, Bard, and others on visual math reasoning is available
-					<b><a href="https://arxiv.org/abs/2310.02255" target="_blank">here</a></b>.
-				</li>
-				<li>
-					<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
-					Honored to serve as PC Chair and co-organize
-					<b><a href="https://socalnlp.github.io/symp23/index.html" target="_blank">SoCal NLP 2023</a></b>. See you in LA!
-				</li>
-				<li>
-					<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
-					One paper on mathematical reasoning is accepted to
-					<b><a href="https://2023.emnlp.org/" target="_blank">EMNLP 2023</a></b>.
-				</li>
-				<li>
-					<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
-					One paper on mathematical reasoning in visual contexts
-					(<b><a href="https://arxiv.org/abs/2310.02255" target="_blank">MathVista</a></b>)
-					is submitted to <b>Preprint</b>.
-				</li>
-				<li>
-					<strong>[09/2023]&nbsp; <font color="red">New!</font></strong>
-					One paper on tool-augmented LLMs is accepted to
-					<b><a href="https://nips.cc/Conferences/2023" target="_blank">NeurIPS 2023</a></b>.
-				</li>
 			</ul>
 			<div id="content"> 
 				<span id="dots"></span>
 				<span id="more">
 					<ul style="margin-top: -15px">
+						<li>
+							<strong>[11/2023]&nbsp; <font color="red">New!</font></strong>
+							Honored to be covered by <b><a href="https://www.cs.ucla.edu/phd-student-pan-lu-wins-2023-qualcomm-innovation-fellowship/" target="_blank">UCLA CS</a></b> for winning <b><a href="https://www.qualcomm.com/research/university-relations/innovation-fellowship/2023-north-america" target="_blank">Qualcomm Innovation Fellowship</a></b>. Thanks!
+						</li>
+						<li>
+							<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
+							The 112-page study on GPT-4V, Bard, and others on visual math reasoning is available
+							<b><a href="https://arxiv.org/abs/2310.02255" target="_blank">here</a></b>.
+						</li>
+						<li>
+							<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
+							Honored to serve as PC Chair and co-organize
+							<b><a href="https://socalnlp.github.io/symp23/index.html" target="_blank">SoCal NLP 2023</a></b>. See you in LA!
+						</li>
+						<li>
+							<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
+							One paper on mathematical reasoning is accepted to
+							<b><a href="https://2023.emnlp.org/" target="_blank">EMNLP 2023</a></b>.
+						</li>
+						<li>
+							<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
+							One paper on mathematical reasoning in visual contexts
+							(<b><a href="https://arxiv.org/abs/2310.02255" target="_blank">MathVista</a></b>)
+							is submitted to <b>Preprint</b>.
+						</li>
+						<li>
+							<strong>[09/2023]&nbsp; <font color="red">New!</font></strong>
+							One paper on tool-augmented LLMs is accepted to
+							<b><a href="https://nips.cc/Conferences/2023" target="_blank">NeurIPS 2023</a></b>.
+						</li>
 						<li>
 							<strong>[07/2023]&nbsp; <font color="red">New!</font></strong>
 							One paper on a scientific reasoning benchmark
@@ -537,24 +537,24 @@
 			<!-- <li>October 7-9, 2024:
 				<a href="https://colmweb.org/" target="_blank">COLM 2024 at Philadelphia, PA</a>
 			</li> -->
-			<li>November 12 - November 16, 2024:
+			<!-- <li>November 12 - November 16, 2024:
 				<a href="https://2024.emnlp.org/" target="_blank">EMNLP 2024 at Miami, Florida</a>
-			</li>
-			<li>January 8, January 11, 2025:
+			</li> -->
+			<li>January 8-9, 2025:
 				<a href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_intro" target="_blank">JMM 2025 at Seattle, Washington</a>
 			</li>
-			<li>April 29 - May 4, 2025:
+			<!-- <li>April 29 - May 4, 2025:
 				<a href="https://2025.naacl.org/" target="_blank">NAACL 2025 at Albuquerque, New Mexico</a>
 			</li>
 			<li>June 10 - June 17, 2025:
 				<a href="https://www.thecvf.com/" target="_blank">CVPR 2025 at Nashville, Tennessee</a>
-			</li>
-			<!-- <li>October 19-25, 2025:
+			</li> -->
+			<li>October 19-25, 2025:
 				<a href="https://www.thecvf.com/" target="_blank">ICCV 2025 at Honolulu, Hawaii</a>
 			</li>
 			<li>December 9-15, 2025:
 				<a href="https://neurips.cc/" target="_blank">NeurIPS 2025 at San Diego, California</a>
-			</li> -->
+			</li>
 		</ul>
 	</div><br>
 
@@ -567,15 +567,42 @@
 		<br>
 		<br>
 
+		<!-- TextGrad -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/textgrad.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="">
+					<img src="logos/fire.png" id="logo">
+					<img src="logos/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">
+						TextGrad: Automatic ''Differentiation'' via Text
+					</font>
+				</b><br>
+				Mert Yuksekgonul*, Federico Bianchi*, Joseph Boen*, Sheng Liu*, <b>Pan Lu*</b>, Zhi Huang*, Carlos Guestrin, James Zou 
+				<br>
+				<b><a href="https://textgrad.com/" target="_blank">Under Review&nbsp;</a></b>
+				<a href="https://textgrad.com/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2406.07496" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2406.07496.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/zou-group/textgrad" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://www.youtube.com/watch?v=Qks4UEsRwl0&ab_channel=DiscoverAI" target="_blank"> <small>[YouTube]&nbsp;</small></a>
+				<a href="https://textgrad.readthedocs.io/en/latest/index.html" target="_blank"> <small>[Documentation]&nbsp;</small></a>
+				<a href="bibs/textgrad.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				(*Equal Contribution)<br>
+			</div>
+		</div>
+		<hr>
+
 		<!-- MMSearch -->
 		<div class="row">
 			<div class="col-md-3">
 				<img class="img-fluid img-rounded" src="imgs/arxiv24_mmsearch.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
-				<a href="">
-					<img src="logos/fire.png" id="logo">
-				</a>
 				<b>
 					<font color="black">
 						MMSearch: Benchmarking the Potential of Large Models as Multi-modal Search Engines
@@ -591,8 +618,7 @@
 				<a href="https://github.com/CaraJ7/MMSearch" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="https://huggingface.co/datasets/CaraJ/MMSearch" target="_blank"> <small>[Data]&nbsp;</small></a>
 				<!-- <a href="https://x.com/lupantech/status/1806021467836186911" target="_blank"> <small>[Twitter]&nbsp;</small></a> -->
-				<a href="bibs/arxiv24_mmsearch.txt" target="_blank"> <small>[BibTex]</small></a><br>
-				(*Equal Contribution)<br>
+				<a href="bibs/arxiv24_mmsearch.txt" target="_blank"> <small>[BibTex]</small></a>
 			</div>
 		</div>
 		<hr>
@@ -603,9 +629,6 @@
 				<img class="img-fluid img-rounded" src="imgs/arxiv24_muirbench.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
-				<a href="">
-					<img src="logos/fire.png" id="logo">
-				</a>
 				<b>
 					<font color="black">
 						MuirBench: A Comprehensive Benchmark for Robust Multi-image Understanding
